Désactivation du système de mailing

--- a/.env
+++ b/.env
@@ -31,8 +31,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=gmail://mael@morin.fr:fghafdjckabdaaiw@smtp.gmail.com:587?encryption=tls&auth_mode=login
-MAILER_SENDER=mael@morin.fr
+#MAILER_DSN=gmail://mael@morin.fr:fghafdjckabdaaiw@smtp.gmail.com:587?encryption=tls&auth_mode=login
+#MAILER_SENDER=mael@morin.fr
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
